--- a/e_commerce/shop/templates/a_shop/samples/register_modal.html
+++ b/e_commerce/shop/templates/a_shop/samples/register_modal.html
@@ -36,7 +36,7 @@
                   data-bs-target="#loginModal">
               Вже зареєстрований
           </div>
-        <button type="submit" class="btn btn-secondary" data-bs-dismiss="modal">Ok</button>
+        <button type="submit" class="btn btn-secondary h-100" data-bs-dismiss="modal">Ok</button>
       </div>
     </form>
   </div>
