--- a/e_commerce/shop/templates/a_shop/category.html
+++ b/e_commerce/shop/templates/a_shop/category.html
@@ -1,11 +1,17 @@
 {% extends 'a_shop/base.html' %}
 {% load static %}
+{% load shop_tags %}
 
 {% block content %}
     <nav aria-label="breadcrumb" class="ms-2">
       <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a href="{% url 'shop:home' %}" class="text-decoration-none">Home</a></li>
-        <li class="breadcrumb-item active" aria-current="page">{{ title }}</li>
+          <li class="breadcrumb-item"><a href="{% url 'shop:home' %}" class="text-decoration-none">Home</a></li>
+          <li class="breadcrumb-item">
+              <a href="{% url 'shop:super_category' category.super_category.id %}" class="text-decoration-none">
+                  {{ category.super_category }}
+              </a>
+          </li>
+          <li class="breadcrumb-item active" aria-current="page">{{ title }}</li>
       </ol>
     </nav>
     <div class="w-100 d-flex flex-row align-items-start">
@@ -15,7 +21,7 @@
         <div class="col-12 col-lg-8 col-xl-9 d-flex flex-column mx-0 px-1">
             <div class="fs-3">{{ title }}</div>
             {% include 'a_shop/samples/page_data_top.html' %}
-            {% include 'a_shop/samples/super_category_sample.html' %}
+            {% include 'a_shop/samples/product_list.html' %}
             {% include 'shop/samples/paginator.html' %}
             {% include 'a_shop/samples/page_data_bottom.html' %}
         </div>
