new_frontend created base.css with responsive custom defined font-size, linked it to base.html, changed navbar.html, product.html, product_description_sample.html font-size, changed ProductView template

--- a/e_commerce/shop/templates/a_shop/base.html
+++ b/e_commerce/shop/templates/a_shop/base.html
@@ -4,13 +4,14 @@
 <html>
     <head>
         <title>{{ title }}</title>
-        <link type="text/css" href="{% static 'shop/css/styles.css' %}" rel="stylesheet">
+<!--        <link type="text/css" href="{% static 'shop/css/base.css' %}" rel="stylesheet">-->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <!--        <script type="text/javascript" src="{% static 'shop/js/base.js' %}" charset="UTF-8"></script>-->
         <meta http-equiv="content-type" content="text/html; charset=utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="{% static 'shop/css/bootstrap.css' %}">
         <script type="text/javascript" src="{% static 'shop/js/cart_base.js' %}" charset="UTF-8"></script>
+        <link type="text/css" href="{% static 'shop/css/base.css' %}" rel="stylesheet">
     </head>
     <body>
         {% include 'a_shop/samples/navbar.html' %}
