--- a/e_commerce/shop/templates/a_shop/product.html
+++ b/e_commerce/shop/templates/a_shop/product.html
@@ -104,16 +104,27 @@
     </ul>
     <div class="tab-content w-100" id="myTabContent">
       <div class="tab-pane fade show active" id="home-tab-pane" role="tabpanel" aria-labelledby="home-tab" tabindex="0">
-          1
+          {% include 'a_shop/samples/product_description_sample.html' %}
+              <div class="row custom-font-size p-2">
+                  {% include 'a_shop/samples/product_characteristic_sample.html' %}
+                  {% include 'a_shop/samples/product_review_sample.html' %}
+              </div>
+                <div class="custom-font-size p-2">
+                    {% include 'a_shop/samples/multi_carousel.html' %}
+                </div>
       </div>
         <div class="tab-pane fade w-100" id="description-tab-pane" role="tabpanel" aria-labelledby="description-tab" tabindex="0">
-          {% include 'a_shop/samples/product_description_sample.html' %}
+            {% include 'a_shop/samples/product_description_sample.html' %}
       </div>
       <div class="tab-pane fade" id="characteristic-tab-pane" role="tabpanel" aria-labelledby="characteristic-tab" tabindex="0">
-          {% include 'a_shop/samples/product_characteristic_sample.html' %}
+          <div class="custom-font-size p-2">
+            {% include 'a_shop/samples/product_characteristic_sample.html' %}
+          </div>
       </div>
       <div class="tab-pane fade" id="review-tab-pane" role="tabpanel" aria-labelledby="review-tab" tabindex="0">
-          {% include 'a_shop/samples/product_review_sample.html' %}
+          <div class="custom-font-size p-2">
+            {% include 'a_shop/samples/product_review_sample.html' %}
+          </div>
       </div>
       <div class="tab-pane fade" id="photo-tab-pane" role="tabpanel" aria-labelledby="photo-tab" tabindex="0">
           {% include 'a_shop/samples/product_photo_sample.html' %}
