--- a/e_commerce/shop/templates/a_shop/samples/product_review_sample.html
+++ b/e_commerce/shop/templates/a_shop/samples/product_review_sample.html
@@ -1,77 +1,75 @@
 {% load static %}
 {% load shop_tags %}
 
-<div class="custom-font-size p-2">
-    <div class="col-12 col-md-6 d-flex flex-column align-items-start">
-        <div class="w-100 fs-4 text-center">Залиште відгук про цей товар</div>
-        {% if user.is_authenticated %}
-            <form class="w-100 p-3" action="{% url 'shop:product_form' product.slug %}" method="post">
-                {% csrf_token %}
-                <div class="form-errors">{{ review_form.non_field_errors }}</div>
-                <!-- rating-->
-                <div class="rating">
-                    <input type="radio" name="grade" id="one" value="1" checked />
-                    <label for="one"><i class="fa fa-star"></i></label>
-                    <input type="radio" name="grade" id="two" value="2" />
-                    <label for="two"><i class="fa fa-star"></i></label>
-                    <input type="radio" name="grade" id="three" value="3" />
-                    <label for="three"><i class="fa fa-star"></i></label>
-                    <input type="radio" name="grade" id="four" value="4" />
-                    <label for="four"><i class="fa fa-star"></i></label>
-                    <input type="radio" name="grade" id="five" value="5" />
-                    <label for="five"><i class="fa fa-star"></i></label>
-                </div>
-                <!-- rating -->
-                <div class="m-2 pe-4 mw-100">{{ review_form.review_text }}</div>
-                <input type="hidden" name="review_author" value="{{ user.id }}">
-                <input type="hidden" name="product" value="{{ product.id }}">
-                <div class="form-errors">{{ review_form.review_text.errors }}</div>
-                <input class="btn btn-secondary" type="submit" value="Зберегти">
-            </form>
-        {% else %}
-            <div class="w-100 fs-4 text-center">Авторизуйтесь, щоб залишити відгук про цей товар</div>
-        {% endif %}
-        {% for review in product_review %}
-            <div class="review">
-                <div class="d-flex flex-column justify-content-start align-items-start w-100">
-                    <div class="d-flex flex-row justify-content-between align-items-center px-3 pt-2 w-100">
-                        {{ review.review_author }}
-                        {{ review.review_date }}
-                        <div class="d-flex flex-row px-3">
-                        <div class="d-flex flex-row me-2">
-                            <div class="like-button" data-review="{{ review.id }}" data-author="{{ user.id }}" data-like="{{ True }}">
-                                <img src="{% static 'shop/images/like_#0000cc.png' %}">
-                                {% if review.like_num %}
-                                    {{ review.like_num }}
-                                {% else %}
-                                    0
-                                {% endif %}
-                            </div>
-                        </div>
-                        <div class="d-flex flex-row">
-                            <div class="like-button" data-review="{{ review.id }}" data-author="{{ user.id }}" data-like="{{ False }}">
-                                <img src="{% static 'shop/images/dislike_#0000cc.png' %}">
-                                {% if review.dislike_num %}
-                                    {{ review.dislike_num }}
-                                {% else %}
-                                    0
-                                {% endif %}
-                            </div>
-                        </div>
+<div class="col-12 col-md-6 d-flex flex-column align-items-start">
+    <div class="w-100 fs-4 text-center p-3">Залиште відгук про цей товар</div>
+    {% if user.is_authenticated %}
+        <form class="w-100 p-3" action="{% url 'shop:product_form' product.slug %}" method="post">
+            {% csrf_token %}
+            <div class="form-errors">{{ review_form.non_field_errors }}</div>
+            <!-- rating-->
+            <div class="rating">
+                <input type="radio" name="grade" id="one" value="1" checked />
+                <label for="one"><i class="fa fa-star"></i></label>
+                <input type="radio" name="grade" id="two" value="2" />
+                <label for="two"><i class="fa fa-star"></i></label>
+                <input type="radio" name="grade" id="three" value="3" />
+                <label for="three"><i class="fa fa-star"></i></label>
+                <input type="radio" name="grade" id="four" value="4" />
+                <label for="four"><i class="fa fa-star"></i></label>
+                <input type="radio" name="grade" id="five" value="5" />
+                <label for="five"><i class="fa fa-star"></i></label>
+            </div>
+            <!-- rating -->
+            <div class="m-2 pe-4 mw-100">{{ review_form.review_text }}</div>
+            <input type="hidden" name="review_author" value="{{ user.id }}">
+            <input type="hidden" name="product" value="{{ product.id }}">
+            <div class="form-errors">{{ review_form.review_text.errors }}</div>
+            <input class="btn btn-secondary" type="submit" value="Зберегти">
+        </form>
+    {% else %}
+        <div class="w-100 fs-4 text-center">Авторизуйтесь, щоб залишити відгук про цей товар</div>
+    {% endif %}
+    {% for review in product_review %}
+        <div class="review">
+            <div class="d-flex flex-column justify-content-start align-items-start w-100">
+                <div class="d-flex flex-row justify-content-between align-items-center px-3 pt-2 w-100">
+                    {{ review.review_author }}
+                    {{ review.review_date }}
+                    <div class="d-flex flex-row px-3">
+                    <div class="d-flex flex-row me-2">
+                        <div class="like-button" data-review="{{ review.id }}" data-author="{{ user.id }}" data-like="{{ True }}">
+                            <img src="{% static 'shop/images/like_#0000cc.png' %}">
+                            {% if review.like_num %}
+                                {{ review.like_num }}
+                            {% else %}
+                                0
+                            {% endif %}
                         </div>
                     </div>
-                    <div class="d-flex flex-row justify-content-between align-items-center px-3 w-100">
-                        <div class="rating" style="color:gold">
-                            {% for _ in review.grade|get_range %}
-                                <i class="fa fa-star"></i>
-                            {% endfor %}
+                    <div class="d-flex flex-row">
+                        <div class="like-button" data-review="{{ review.id }}" data-author="{{ user.id }}" data-like="{{ False }}">
+                            <img src="{% static 'shop/images/dislike_#0000cc.png' %}">
+                            {% if review.dislike_num %}
+                                {{ review.dislike_num }}
+                            {% else %}
+                                0
+                            {% endif %}
                         </div>
                     </div>
+                    </div>
                 </div>
-                <div class="d-flex flex-row justify-content-between align-items-center p-3 w-100">
-                    {{ review.review_text }}
+                <div class="d-flex flex-row justify-content-between align-items-center px-3 w-100">
+                    <div class="rating" style="color:gold">
+                        {% for _ in review.grade|get_range %}
+                            <i class="fa fa-star"></i>
+                        {% endfor %}
+                    </div>
                 </div>
             </div>
-        {% endfor %}
-    </div>
+            <div class="d-flex flex-row justify-content-between align-items-center p-3 w-100">
+                {{ review.review_text }}
+            </div>
+        </div>
+    {% endfor %}
 </div>
