--- a/e_commerce/shop/static/shop/css/base.css
+++ b/e_commerce/shop/static/shop/css/base.css
@@ -83,3 +83,65 @@ $rad: 8px;
     max-height: 100%;
     margin: 10px;
 }
+
+/* readonly star rating */
+.star-ratings-css {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  unicode-bidi: bidi-override;
+  color: #c5c5c5;
+  font-size: 18px;
+  height: 25px;
+  width: 80px;
+  position: relative;
+  text-shadow: 0 1px 0 #a2a2a2;
+}
+.star-ratings-css::before {
+  content: '★★★★★';
+  opacity: .3;
+}
+
+[title="0"]::after {
+  width: 0%;
+}
+[title="1"]::after {
+  width: 10%;
+}
+[title="2"]::after {
+  width: 20%;
+}
+[title="3"]::after {
+  width: 30%;
+}
+[title="4"]::after {
+  width: 40%;
+}
+[title="5"]::after {
+  width: 50%;
+}
+[title="6"]::after {
+  width: 60%;
+}
+[title="7"]::after {
+  width: 70%;
+}
+[title="8"]::after {
+  width: 80%;
+}
+[title="9"]::after {
+  width: 90%;
+}
+.star-ratings-css::after {
+  color: gold;
+  content: '★★★★★';
+  text-shadow: 0 1px 0 #ab5414;
+  position: absolute;
+  z-index: 1;
+  display: block;
+  left: 0;
+  top:0;
+  width: attr(rating);
+  overflow: hidden;
+}
+/* end readonly star rating */
