new_frontend created filter_offcanvas.html, added it to base.html, added #product_in_cart in base.css, added filter calling option to offcanvas and right_bar.html, corrected product_list cart header, product_description_sample with 'product added to cart'

--- a/e_commerce/shop/static/shop/css/base.css
+++ b/e_commerce/shop/static/shop/css/base.css
@@ -145,3 +145,8 @@ $rad: 8px;
   overflow: hidden;
 }
 /* end readonly star rating */
+
+#product-in-cart {
+    display: none;
+    color: green;
+}
