--- a/e_commerce/shop/templates/a_shop/samples/offcanvas.html
+++ b/e_commerce/shop/templates/a_shop/samples/offcanvas.html
@@ -57,9 +57,30 @@
       </ul>
     </div>
         <a class="nav-link d-flex flex-row align-items-center w-100" href="{% url 'shop:cart' %}">
-            <img src="{% static 'shop/images/grey_basket.png' %}" class="menu-btn" style="margin:10px">
+            <img
+                    src="{% static 'shop/images/grey_basket.png' %}"
+                    class="menu-btn"
+                    style="margin:10px; width:30px; height:30px"
+            >
             Корзина
         </a>
+        {% if category_flag %}
+            <a
+                  class="nav-link"
+                  data-bs-toggle="offcanvas"
+                  href="#offcanvasFilter"
+                  role="button"
+                  aria-controls="offcanvasFilter"
+            >
+                <div class="nav-link d-flex flex-row align-items-center w-100">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-filter-square mx-3" viewBox="0 0 16 16">
+                      <path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"/>
+                      <path d="M6 11.5a.5.5 0 0 1 .5-.5h3a.5.5 0 0 1 0 1h-3a.5.5 0 0 1-.5-.5zm-2-3a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7a.5.5 0 0 1-.5-.5zm-2-3a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11a.5.5 0 0 1-.5-.5z"/>
+                    </svg>
+                    Фільтр
+                </div>
+            </a>
+        {% endif %}
         {% include 'a_shop/samples/right_bar_small.html' %}
   </div>
 
