--- a/e_commerce/shop/templates/a_shop/samples/product_description_sample.html
+++ b/e_commerce/shop/templates/a_shop/samples/product_description_sample.html
@@ -12,7 +12,7 @@
         <div class="d-flex flex-column w-100">
             <div class="d-flex flex-row justify-content-between mx-0 my-3 ps-2 w-100">
                 {% if product.sold %}
-                    <div>
+                    <div class="text-body-tertiary">
                         Товар відсутній
                     </div>
                 {% else %}
@@ -30,7 +30,7 @@
                         data-product="{{ product.id }}"
                         data-action="add"
                         data-sold="{{ product.sold }}"
-                        class="btn btn-secondary d-flex flex-row align-items-center"
+                        class="btn btn-secondary d-flex flex-row align-items-center product-basket-button"
                 >
                     <img
                             src="{% static 'shop/images/white_basket.png' %}"
