new_frontend created a_shop cart and cart_sample html, added classes to base.css, changed CartView template

--- a/e_commerce/shop/static/shop/css/base.css
+++ b/e_commerce/shop/static/shop/css/base.css
@@ -171,3 +171,9 @@ $rad: 8px;
     border-radius: 3px;
     background-color: rgb(180,180,180);
 }
+
+.cart-quantity {
+    margin: 2px;
+    width: 15px;
+    height: 15px;
+}
