--- a/e_commerce/shop/templates/a_shop/samples/page_data_bottom.html
+++ b/e_commerce/shop/templates/a_shop/samples/page_data_bottom.html
@@ -2,23 +2,22 @@
 {% load shop_tags %}
 
 {% if page_data %}
-<div class="d-flex flex-column w-100">
-
+<div class="d-flex flex-column w-100 custom-font-size">
     {% if page_data.header_3 %}
         <div>
-            <h3>{{ page_data.header_3 }}</h3>
+            <h3 class="text-center">{{ page_data.header_3 }}</h3>
         </div>
     {% endif %}
 
     {% if page_data.text_3 or page_data.image_3 %}
-        <div class="d-flex flex-row flex-wrap justify-content-around">
+        <div class="d-flex flex-row flex-wrap justify-content-around w-100">
             {% if page_data.text_3 %}
-                <div class="w-75">
+                <div class="w-100 p-3">
+                    {% if page_data.image_3 %}
+                        <img class="w-25 float-end" src="{{ page_data.image_3.url }}">
+                    {% endif %}
                     {{ page_data.text_3 }}
                 </div>
-            {% endif %}
-            {% if page_data.image_3 %}
-                <img class="w-25" src="{{ page_data.image_3.url }}">
             {% endif %}
         </div>
     {% endif %}
