new_frontend deleted old shop templates, transfer login and register html to a_shop/register, added paginator.html and changed links to it

--- a/e_commerce/shop/templates/a_shop/category.html
+++ b/e_commerce/shop/templates/a_shop/category.html
@@ -27,7 +27,7 @@
             <div class="fs-3">{{ title }}</div>
             {% include 'a_shop/samples/page_data_top.html' %}
             {% include 'a_shop/samples/product_list.html' %}
-            {% include 'shop/samples/paginator.html' %}
+            {% include 'a_shop/samples/paginator.html' %}
             {% include 'a_shop/samples/page_data_bottom.html' %}
         </div>
     </div>
