--- a/e_commerce/shop/static/shop/css/base.css
+++ b/e_commerce/shop/static/shop/css/base.css
@@ -178,3 +178,25 @@ $rad: 8px;
     height: 15px;
 }
 
+.paginator-item {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50px;
+    height: 50px;
+    border-radius:15px;
+    font-size: 22px;
+    box-shadow: 2px 2px 2px 2px rgb(200,200,200);
+    text-decoration: none;
+    margin: 5px;
+}
+
+.paginator-dot {
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+    align-items: center;
+    width: 50px;
+    height: 50px;
+    margin: 5px;
+}
