--- a/e_commerce/shop/templates/a_shop/search_results.html
+++ b/e_commerce/shop/templates/a_shop/search_results.html
@@ -7,6 +7,7 @@
     <h1>Результат пошуку за запитом "{{ query }}"</h1>
 
     {% include 'a_shop/samples/product_list.html' %}
+    {% include 'a_shop/samples/paginator.html' %}
     {% include 'a_shop/samples/page_data_bottom.html' %}
 </div>
 {% endblock %}
