--- a/e_commerce/shop/templates/a_shop/super_category.html
+++ b/e_commerce/shop/templates/a_shop/super_category.html
@@ -16,7 +16,7 @@
             <div class="fs-3">{{ title }}</div>
             {% include 'a_shop/samples/page_data_top.html' %}
             {% include 'a_shop/samples/super_category_sample.html' %}
-            {% include 'shop/samples/paginator.html' %}
+            {% include 'a_shop/samples/paginator.html' %}
             {% include 'a_shop/samples/page_data_bottom.html' %}
         </div>
     </div>
