--- a/e_commerce/shop/templates/a_shop/home.html
+++ b/e_commerce/shop/templates/a_shop/home.html
@@ -19,5 +19,6 @@
             </div>
     </div>
     {{ cartJson|json_script:"cartJson" }}
-    <script type="text/javascript" src="{%static 'shop/js/addCookieCart.js' %}"></script>
+    <script type="text/javascript" src="{%static 'shop/js/addCookieCart.js' %}">
+    </script>
 {% endblock %}
