--- a/e_commerce/shop/templates/a_shop/samples/product_description_sample.html
+++ b/e_commerce/shop/templates/a_shop/samples/product_description_sample.html
@@ -24,7 +24,9 @@
                     <p>Товар доданий до корзини</p>
                 </div>
             </div>
-            <div class="d-flex flex-row justify-content-around align-items-center my-3 w-100">
+            <div
+                    class="d-flex flex-row justify-content-around align-items-center my-3 w-100"
+            >
                 <h3>{{ product.price }}</h3>
                 <button
                         data-product="{{ product.id }}"
