--- a/e_commerce/shop/templates/a_shop/samples/right_bar_small.html
+++ b/e_commerce/shop/templates/a_shop/samples/right_bar_small.html
@@ -4,14 +4,30 @@
 <div class="nav-link w-100">Інформація про компанію</div>
 <hr class="bg-black w-100">
 <a href="{% url 'shop:about' %}" class="nav-link w-100 my-2">Про нас</a>
-<a href="{% url 'shop:terms' %}" class="nav-link w-100 my-2">Умови використання сайту</a>
-<a href="{% url 'shop:contacts' %}" class="nav-link w-100 my-2">Контакти</a>
-<a href="{% url 'shop:help' %}" class="nav-link w-100 my-2">Допомога</a>
-<a href="{% url 'shop:delivery' %}" class="nav-link w-100 my-2">Доставка і оплата</a>
-<a href="{% url 'shop:credit' %}" class="nav-link w-100 my-2">Кредит</a>
-<a href="{% url 'shop:return_products' %}" class="nav-link w-100 my-2">Повернення товару</a>
-<a href="{% url 'shop:service_centers' %}" class="nav-link w-100 my-2">Сервісні центрі</a>
-<a href="{% url 'shop:for_partners' %}" class="nav-link w-100 my-2">Партнерам</a>
+<a href="{% url 'shop:terms' %}" class="nav-link w-100 my-2">
+    Умови використання сайту
+</a>
+<a href="{% url 'shop:contacts' %}" class="nav-link w-100 my-2">
+    Контакти
+</a>
+<a href="{% url 'shop:help' %}" class="nav-link w-100 my-2">
+    Допомога
+</a>
+<a href="{% url 'shop:delivery' %}" class="nav-link w-100 my-2">
+    Доставка і оплата
+</a>
+<a href="{% url 'shop:credit' %}" class="nav-link w-100 my-2">
+    Кредит
+</a>
+<a href="{% url 'shop:return_products' %}" class="nav-link w-100 my-2">
+    Повернення товару
+</a>
+<a href="{% url 'shop:service_centers' %}" class="nav-link w-100 my-2">
+    Сервісні центрі
+</a>
+<a href="{% url 'shop:for_partners' %}" class="nav-link w-100 my-2">
+    Партнерам
+</a>
 <hr class="bg-black w-100">
 <div class="nav-link w-100">Ми в соціальних мережах</div>
 <hr class="bg-black w-100">
