--- a/e_commerce/shop/templates/a_shop/product.html
+++ b/e_commerce/shop/templates/a_shop/product.html
@@ -3,7 +3,11 @@
 {% load shop_tags %}
 
 {% block content %}
-    <nav aria-label="breadcrumb" class="ms-2" style="--bs-breadcrumb-font-size: min(calc(7px + 0.9vw), 16px);">
+    <nav
+            aria-label="breadcrumb"
+            class="ms-2"
+            style="--bs-breadcrumb-font-size: min(calc(7px + 0.9vw), 16px);"
+    >
       <ol class="breadcrumb">
           <li class="breadcrumb-item">
               <a href="{% url 'shop:home' %}" class="text-decoration-none">Home</a>
@@ -40,7 +44,11 @@
         </div>
     </div>
 
-    <ul class="nav nav-tabs nav-tabs-light flex-column flex-md-row custom-font-size" id="myTab" role="tablist">
+    <ul
+            class="nav nav-tabs nav-tabs-light flex-column flex-md-row custom-font-size"
+            id="myTab"
+            role="tablist"
+    >
       <li class="nav-item" role="presentation">
         <button
                 class="nav-link active"
@@ -103,7 +111,13 @@
       </li>
     </ul>
     <div class="tab-content w-100" id="myTabContent">
-      <div class="tab-pane fade show active" id="home-tab-pane" role="tabpanel" aria-labelledby="home-tab" tabindex="0">
+      <div
+              class="tab-pane fade show active"
+              id="home-tab-pane"
+              role="tabpanel"
+              aria-labelledby="home-tab"
+              tabindex="0"
+      >
           {% include 'a_shop/samples/product_description_sample.html' %}
               <div class="row custom-font-size p-2">
                   {% include 'a_shop/samples/product_characteristic_sample.html' %}
@@ -113,20 +127,44 @@
                     {% include 'a_shop/samples/multi_carousel.html' %}
                 </div>
       </div>
-        <div class="tab-pane fade w-100" id="description-tab-pane" role="tabpanel" aria-labelledby="description-tab" tabindex="0">
+        <div
+                class="tab-pane fade w-100"
+                id="description-tab-pane"
+                role="tabpanel"
+                aria-labelledby="description-tab"
+                tabindex="0"
+        >
             {% include 'a_shop/samples/product_description_sample.html' %}
       </div>
-      <div class="tab-pane fade" id="characteristic-tab-pane" role="tabpanel" aria-labelledby="characteristic-tab" tabindex="0">
+      <div
+              class="tab-pane fade"
+              id="characteristic-tab-pane"
+              role="tabpanel"
+              aria-labelledby="characteristic-tab"
+              tabindex="0"
+      >
           <div class="custom-font-size p-2">
             {% include 'a_shop/samples/product_characteristic_sample.html' %}
           </div>
       </div>
-      <div class="tab-pane fade" id="review-tab-pane" role="tabpanel" aria-labelledby="review-tab" tabindex="0">
+      <div
+              class="tab-pane fade"
+              id="review-tab-pane"
+              role="tabpanel"
+              aria-labelledby="review-tab"
+              tabindex="0"
+      >
           <div class="custom-font-size p-2">
             {% include 'a_shop/samples/product_review_sample.html' %}
           </div>
       </div>
-      <div class="tab-pane fade" id="photo-tab-pane" role="tabpanel" aria-labelledby="photo-tab" tabindex="0">
+      <div
+              class="tab-pane fade"
+              id="photo-tab-pane"
+              role="tabpanel"
+              aria-labelledby="photo-tab"
+              tabindex="0"
+      >
           {% include 'a_shop/samples/product_photo_sample.html' %}
       </div>
     </div>
