--- a/e_commerce/shop/templates/a_shop/register/password_reset_complete.html
+++ b/e_commerce/shop/templates/a_shop/register/password_reset_complete.html
@@ -5,6 +5,8 @@
 {% block content %}
     <div class="menu-down-content-items" style="margin:80px">
         <h1>Встановлення пароля</h1>
-        <p>Ваш пароль встановлений. Ви можете <a href="{% url 'shop:home' %}">авторизуватись зараз</a></p>
+        <p>Ваш пароль встановлений. Ви можете
+            <a href="{% url 'shop:home' %}">
+                авторизуватись зараз</a></p>
     </div>
 {% endblock %}
