--- a/e_commerce/shop/templates/a_shop/samples/login_modal.html
+++ b/e_commerce/shop/templates/a_shop/samples/login_modal.html
@@ -38,7 +38,9 @@
                   data-bs-toggle="modal"
                   data-bs-target="#registerModal"
           >Зареєструватися</div>
-        <button type="submit" class="btn btn-secondary h-100" data-bs-dismiss="modal">Ok</button>
+        <button type="submit" class="btn btn-secondary h-100" data-bs-dismiss="modal">
+            Ok
+        </button>
       </div>
     </form>
   </div>
