--- a/e_commerce/shop/templates/a_shop/samples/offcanvas.html
+++ b/e_commerce/shop/templates/a_shop/samples/offcanvas.html
@@ -43,20 +43,30 @@
         </div>
     {% endif %}
     <div class="dropdown mt-3 w-100">
-      <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown">
+      <button
+              class="btn btn-secondary dropdown-toggle"
+              type="button"
+              data-bs-toggle="dropdown"
+      >
         Каталог
       </button>
       <ul class="dropdown-menu">
           {% for super_category in super_categories %}
             <li>
-                <a class="dropdown-item" href="{% url 'shop:super_category' super_category.id %}">
+                <a
+                        class="dropdown-item"
+                        href="{% url 'shop:super_category' super_category.id %}"
+                >
                     {{ super_category.name }}
                 </a>
             </li>
           {% endfor %}
       </ul>
     </div>
-        <a class="nav-link d-flex flex-row align-items-center w-100" href="{% url 'shop:cart' %}">
+        <a
+                class="nav-link d-flex flex-row align-items-center w-100"
+                href="{% url 'shop:cart' %}"
+        >
             <img
                     src="{% static 'shop/images/grey_basket.png' %}"
                     class="menu-btn"
@@ -73,7 +83,14 @@
                   aria-controls="offcanvasFilter"
             >
                 <div class="nav-link d-flex flex-row align-items-center w-100">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-filter-square mx-3" viewBox="0 0 16 16">
+                    <svg
+                            xmlns="http://www.w3.org/2000/svg"
+                            width="20"
+                            height="20"
+                            fill="currentColor"
+                            class="bi bi-filter-square mx-3"
+                            viewBox="0 0 16 16"
+                    >
                       <path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"/>
                       <path d="M6 11.5a.5.5 0 0 1 .5-.5h3a.5.5 0 0 1 0 1h-3a.5.5 0 0 1-.5-.5zm-2-3a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7a.5.5 0 0 1-.5-.5zm-2-3a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11a.5.5 0 0 1-.5-.5z"/>
                     </svg>
