--- a/e_commerce/shop/templates/a_shop/samples/product_list.html
+++ b/e_commerce/shop/templates/a_shop/samples/product_list.html
@@ -30,8 +30,17 @@
             <h5 class="text-dark mb-0">{{ product.0.price }}</h5>
           </div>
 
-          <div class="d-flex flex-row justify-content-between align-items-center mb-1 me-0 w-100">
-            <div class="pw-2"><a href="{% url 'shop:category' product.0.category.slug %}" class="text-muted fx-6">{{ product.0.category }}</a></div>
+          <div
+                  class="d-flex flex-row justify-content-between align-items-center mb-1 me-0 w-100"
+          >
+            <div class="pw-2">
+              <a
+                      href="{% url 'shop:category' product.0.category.slug %}"
+                      class="text-muted fx-6"
+              >
+                {{ product.0.category }}
+              </a>
+            </div>
 
             <div class="small text-muted fx-6">
                 {% if product.0.sold %}Товар відсутній{% else %}В наявності{% endif %}
