--- a/e_commerce/shop/templates/a_shop/samples/right_bar.html
+++ b/e_commerce/shop/templates/a_shop/samples/right_bar.html
@@ -3,7 +3,10 @@
 <div class="d-flex flex-column align-items-start w-100 ps-3">
     {% if super_category_flag %}
         {% for super_category in super_categories %}
-            <a href="{{ super_category.get_absolute_url }}" class="nav-link d-flex flex-row text-decoration-none my-1 w-100">
+            <a
+                    href="{{ super_category.get_absolute_url }}"
+                    class="nav-link d-flex flex-row text-decoration-none my-1 w-100"
+            >
                 <img src="{{ super_category.icon.url }}" width="18" height="18">
                 <div class="ms-3">{{ super_category }}</div>
             </a>
@@ -11,7 +14,10 @@
     {% endif %}
     {% if category_flag %}
         {% for category in categories %}
-                <a href="{{ category.get_absolute_url }}" class="nav-link d-flex flex-row text-decoration-none my-1 w-100">
+                <a
+                        href="{{ category.get_absolute_url }}"
+                        class="nav-link d-flex flex-row text-decoration-none my-1 w-100"
+                >
                     {% if category.icon %}
                     <div><img src="{{ category.icon.url }}" style="width:auto; height:auto; max-width:20px; max-height:20px"></div>
                     {% endif %}
@@ -30,7 +36,14 @@
               aria-controls="offcanvasFilter"
         >
             <div class="nav-link d-flex flex-row align-items-center w-100">
-                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-filter-square me-3" viewBox="0 0 16 16">
+                <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="20"
+                        height="20"
+                        fill="currentColor"
+                        class="bi bi-filter-square me-3"
+                        viewBox="0 0 16 16"
+                >
                   <path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"/>
                   <path d="M6 11.5a.5.5 0 0 1 .5-.5h3a.5.5 0 0 1 0 1h-3a.5.5 0 0 1-.5-.5zm-2-3a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7a.5.5 0 0 1-.5-.5zm-2-3a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11a.5.5 0 0 1-.5-.5z"/>
                 </svg>
@@ -40,7 +53,14 @@
     {% endif %}
     <hr class="bg-black w-100">
     <a href="{% url 'shop:contacts' %}" class="nav-link d-flex flex-row align-items-center">
-        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-question-circle me-3" viewBox="0 0 16 16">
+        <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="20"
+                height="20"
+                fill="currentColor"
+                class="bi bi-question-circle me-3"
+                viewBox="0 0 16 16"
+        >
           <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
           <path d="M5.255 5.786a.237.237 0 0 0 .241.247h.825c.138 0 .248-.113.266-.25.09-.656.54-1.134 1.342-1.134.686 0 1.314.343 1.314 1.168 0 .635-.374.927-.965 1.371-.673.489-1.206 1.06-1.168 1.987l.003.217a.25.25 0 0 0 .25.246h.811a.25.25 0 0 0 .25-.25v-.105c0-.718.273-.927 1.01-1.486.609-.463 1.244-.977 1.244-2.056 0-1.511-1.276-2.241-2.673-2.241-1.267 0-2.655.59-2.75 2.286zm1.557 5.763c0 .533.425.927 1.01.927.609 0 1.028-.394 1.028-.927 0-.552-.42-.94-1.029-.94-.584 0-1.009.388-1.009.94z"/>
         </svg>
@@ -48,7 +68,14 @@
     </a>
     <hr class="bg-black w-100">
     <a href="{% url 'shop:delivery' %}" class="nav-link d-flex flex-row align-items-center">
-        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-truck me-3" viewBox="0 0 16 16">
+        <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="20"
+                height="20"
+                fill="currentColor"
+                class="bi bi-truck me-3"
+                viewBox="0 0 16 16"
+        >
           <path d="M0 3.5A1.5 1.5 0 0 1 1.5 2h9A1.5 1.5 0 0 1 12 3.5V5h1.02a1.5 1.5 0 0 1 1.17.563l1.481 1.85a1.5 1.5 0 0 1 .329.938V10.5a1.5 1.5 0 0 1-1.5 1.5H14a2 2 0 1 1-4 0H5a2 2 0 1 1-3.998-.085A1.5 1.5 0 0 1 0 10.5v-7zm1.294 7.456A1.999 1.999 0 0 1 4.732 11h5.536a2.01 2.01 0 0 1 .732-.732V3.5a.5.5 0 0 0-.5-.5h-9a.5.5 0 0 0-.5.5v7a.5.5 0 0 0 .294.456zM12 10a2 2 0 0 1 1.732 1h.768a.5.5 0 0 0 .5-.5V8.35a.5.5 0 0 0-.11-.312l-1.48-1.85A.5.5 0 0 0 13.02 6H12v4zm-9 1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm9 0a1 1 0 1 0 0 2 1 1 0 0 0 0-2z"/>
         </svg>
         Точки видачі
@@ -57,7 +84,9 @@
     {% if not user.is_authenticated %}
         <div class="d-flex flex-column align-items-center justify-content-around">
             <p>Раді вітати!</p>
-            <p>Ввійдіть для того, щоб отримувати рекомендації, персональні бонуси та знижки</p>
+            <p>
+                Ввійдіть для того, щоб отримувати рекомендації, персональні бонуси та знижки
+            </p>
             <button
                     class="btn btn-secondary w-100"
                     data-bs-toggle="modal"
