--- a/e_commerce/shop/templates/a_shop/super_category.html
+++ b/e_commerce/shop/templates/a_shop/super_category.html
@@ -4,7 +4,9 @@
 {% block content %}
     <nav aria-label="breadcrumb" class="ms-2">
       <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a href="{% url 'shop:home' %}" class="text-decoration-none">Home</a></li>
+        <li class="breadcrumb-item">
+            <a href="{% url 'shop:home' %}" class="text-decoration-none">Home</a>
+        </li>
         <li class="breadcrumb-item active" aria-current="page">{{ title }}</li>
       </ol>
     </nav>
