new_frontend added review_modal.html, added it to product.html, deleted form from product_review_sample.html, deleted old styles.css and base.js

--- a/e_commerce/shop/templates/a_shop/product.html
+++ b/e_commerce/shop/templates/a_shop/product.html
@@ -168,7 +168,7 @@
           {% include 'a_shop/samples/product_photo_sample.html' %}
       </div>
     </div>
-
+    {% include 'a_shop/samples/review_modal.html' %}
 
     <script type="text/javascript" src="{% static 'shop/js/like.js' %}"></script>
 {% endblock %}
