--- a/e_commerce/shop/templates/a_shop/samples/offcanvas.html
+++ b/e_commerce/shop/templates/a_shop/samples/offcanvas.html
@@ -19,7 +19,7 @@
   </div>
   <div class="offcanvas-body d-flex flex-column wm-100 overflow-hidden">
     {% if not user.is_authenticated %}
-        <div style="w-100">
+        <div class="w-100">
             <div class="d-flex flex-row">
                 <a
                         class="nav-link px-3"
