new_frontend added padding in checkout.html

--- a/e_commerce/shop/templates/a_shop/checkout.html
+++ b/e_commerce/shop/templates/a_shop/checkout.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block content %}
-    <div class="container account-font-size">
+    <div class="container account-font-size pt-2">
         {% if order.get_order_items %}
         <div class="row">
             <form id="form" method="post" class="col-10">
